Fix trainings not showing bug

--- a/public/stylesheets/training.css
+++ b/public/stylesheets/training.css
@@ -250,6 +250,6 @@ a.btn.btn-danger {
 }
 
 .trainingContent li {
-    display: none;
+    /*display: none;*/
     /*opacity: 0;*/
 }
